software-center (3.1.18) UNRELEASED; urgency=low

  * added "Was this review useful" feature

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Feb 2011 15:40:03 +0100

software-center (3.1.17.1) natty; urgency=low

  * utils/update-software-center:
    - fix crash in postinst

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Feb 2011 13:23:10 +0100

software-center (3.1.17) natty; urgency=low

  [ Michael Vogt ]
  * test/Makefile:
    - do no longer depend on mago checkout, natty has the version
      we need now
  * test/mago/test_with_mago.py:
    - add scrolldown test
  * merged lp:~didrocks/software-center/fix-never-visible-tech-items,
    many thanks to Didier Roche
  * softwarecenter/paths.py:
    - consolidate all pathes in this file and update the code to use
      it
  * merged lp:~mpt/software-center/3.0-rnr-cleanup, many thanks
  * softwarecenter/db/database.py, test/test_database.py:
    - add API to get applications for a given pkgname
  * merged lp:~aaronp/software-center/reviews-tweaks
    many thanks to Aaron Peachey
  * softwarecenter/db/update.py:
    - add basic appinfo xml parser
  * merged lp:~aaronp/software-center/misc-stuff, many thanks
  * merged lp:~bilalakhtar/software-center/write-review-installed-only,
    thanks to Bilal Akhtar

  [ Aaron Peachey ]
  * implemented https://wiki.ubuntu.com/SoftwareCenter/#Self-awareness
  * improve the feedback for the gwibber interaction

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash if we have pkg in cache, but no candidate (LP: #713878)
  * softwarecenter/db/application.py:
    - only return the component listed in a desktop file if the package is not
      available in the apt cache (LP: #707615)
  * softwarecenter/models/appstore.py:
    - fix _get_estimate_nr_apps_and_nr_pkgs() to return precise numbers
    - fix handling of nr_apps, nr_pkgs in _blocking_perform_search()
  * softwarecenter/view/appdetailsview_gtk.py:
    - hide progress bar on error